# autoharness

./: .env.example  .gitignore  AGENTS.md  README.md  playground.py  playground_textarena.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-11-autoharness-mvp.md  2026-07-13-harness-as-policy-implementation.md
docs/superpowers/specs/: 2026-07-11-autoharness-mvp-design.md  2026-07-13-harness-as-policy-design.md
src/autoharness/: __init__.py  cli.py  cli_test.py
src/autoharness/harness_as_policy/: __init__.py  artifacts.py  artifacts_test.py  assessment.py  assessment_test.py  blackjack.py  blackjack_test.py  cli_test.py  config.py  config_test.py  environment.py  environment_test.py  evaluation.py  evaluation_test.py  executor.py  executor_test.py  live_policy.py  models.py  models_test.py  refiner.py  refiner_test.py  registry.py  registry_test.py  rollout.py  rollout_test.py  search.py  search_test.py  tower_of_hanoi.py  tower_of_hanoi_test.py
src/autoharness/harness_as_policy/environments/: __init__.py  base.py  registry.py  tower_of_hanoi.py
tests/: test_cli.py
tests/harness_as_policy/: test_artifacts.py  test_config.py  test_evaluation.py  test_live_policy.py  test_models.py  test_refiner.py  test_search.py
tests/harness_as_policy/environments/: test_base.py  test_blackjack.py  test_registry.py  test_tower_of_hanoi.py
