[project]
name = "autoharness"
version = "0.1.0"
description = "Autoharness Implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph-cli[inmem]>=0.4.31",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "textarena>=0.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoharness"]

[project.scripts]
autoharness = "autoharness.cli:main"

[tool.ruff]
exclude = []
line-length = 100
target-version = "py314"

[tool.ruff.format]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
